# board-game-ar

./: .gitignore  README.md  build.gradle  gradle.properties  local.properties  requirements.txt  settings.gradle  wykrywanie_elementow.py
AR_Planszowki-ania_new/app/: build.gradle
AR_Planszowki-ania_new/app/src/debug/res/mipmap-anydpi-v26/: rounded_bg.xml
AR_Planszowki-ania_new/app/src/debug/res/values/: rounded_bg_background.xml
AR_Planszowki-ania_new/app/src/main/: AndroidManifest.xml
AR_Planszowki-ania_new/app/src/main/assets/: info_board.glb
AR_Planszowki-ania_new/app/src/main/res/layout/: activity_aractivity.xml  activity_main.xml  content_main.xml  fragment_board_games.xml  fragment_first.xml  fragment_larps.xml  fragment_live_camera.xml  tiger_card_view.xml
AR_Planszowki-ania_new/app/src/main/res/navigation/: nav_graph.xml
AR_Planszowki-ania_new/app/src/main/res/values/: strings.xml  themes.xml
AR_Planszowki-ania_new/app/src/main/res/xml/: provider_paths.xml
AR_Planszowki-ania_new/gradle/wrapper/: gradle-wrapper.properties
AR_Planszowki-basia/: settings.gradle
AR_Planszowki-basia/app/src/main/: AndroidManifest.xml
AR_Planszowki-basia/app/src/main/res/layout/: activity_main.xml  widok_zdjecia.xml
AR_Planszowki-basia/app/src/main/res/mipmap-anydpi-v26/: ic_jigglipuff_round.xml
AR_Planszowki-basia/gradle/wrapper/: gradle-wrapper.properties
MyApplication/app/: build.gradle
MyApplication/app/src/main/: AndroidManifest.xml
MyApplication/gradle/wrapper/: gradle-wrapper.properties
Test1/: .gitignore  main.py
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: BitmapDecoder.cpp  BitmapDecoder.hpp  CMakeLists.txt  cards_correction.cpp  cards_correction.hpp  cards_detection.cpp  cards_recognition.cpp  cards_recognition.hpp  native-lib.cpp
app/src/main/cpp/libcatan/: .gitignore  CMakeLists.txt  CMakeSettings.json
app/src/main/cpp/libcatan/example/: CMakeLists.txt  main.cpp
app/src/main/cpp/libcatan/include/: catan.hpp
app/src/main/cpp/libcatan/include/catan/: analysis.hpp  analysis_cells.hpp  analysis_settlements.hpp  board_coords.hpp  board_ir.hpp  cards_detection.hpp  cards_recognition.hpp  common_math.hpp  image_correction.hpp  resource_provider.hpp  utility_opencv.hpp
app/src/main/cpp/libcatan/src/catan/: analysis.cpp  analysis_cells.cpp  analysis_settlements.cpp  board_coords.cpp  board_detection.cpp  board_ir.cpp  cards_correction.cpp  cards_recognition.cpp  image_correction.cpp  resource_provider.cpp  utility_opencv.cpp
app/src/main/res/layout/: activity_aractivity.xml  activity_camera.xml  activity_main.xml  content_main.xml  fragment_board_games.xml  fragment_first.xml  fragment_larps.xml  fragment_photo.xml  score_display_view.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/mipmap-anydpi-v26/: catan_board_icon.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: catan_board_icon_background.xml  colors.xml  dimens.xml  ic_jigglipuff_background.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
board-detection-script/: .gitignore  README.md  elements_detection.py  main.py  pomocnicze_funkcje_do_obrazkow.py  przydatne_funkcje.py  utilities.py  wykrywanie_elementow.py
cv-prototyping/: .gitignore  CMakeLists.txt  CMakeSettings.json  board_coords.cpp  board_detection.cpp  image_correction.cpp  main.cpp  utility_opencv.cpp
cv-prototyping/headers/: board_coords.hpp  board_detection.hpp  image_correction.hpp  utility_opencv.hpp
cv-prototyping/include/catan/: analysis.hpp  analysis_cells.hpp  analysis_settlements.hpp  board_coords.hpp  board_detection.hpp  board_ir.hpp  cards_correction.hpp  cards_detection.hpp  cards_recognition.hpp  common_math.hpp  image_correction.hpp  pawns_detection.hpp  utility_opencv.hpp
cv-prototyping/src/: main.cpp
cv-prototyping/src/catan/: analysis.cpp  analysis_cells.cpp  analysis_settlements.cpp  board_coords.cpp  board_detection.cpp  board_ir.cpp  cards_correction.cpp  cards_detection.cpp  cards_recognition.cpp  image_correction.cpp  pawns_detection.cpp  utility_opencv.cpp
gradle/wrapper/: gradle-wrapper.properties
libcatan/: CMakeLists.txt
libcatan/example/: main.cpp
libcatan/include/: catan.hpp
libcatan/include/catan/: analysis.hpp  board_coords.hpp  common_math.hpp  utility_opencv.hpp
libcatan/src/catan/: analysis.cpp  analysis_cells.cpp  analysis_settlements.cpp  board_coords.cpp  board_detection.cpp  image_correction.cpp  utility_opencv.cpp
(+60 files in other folders)
